Hopefully this works lmao

--- a/docs/_layout/sidebar-after/index.html
+++ b/docs/_layout/sidebar-after/index.html
@@ -3,9 +3,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<meta name="generator" content="Hugo 0.100.1" />
     <title>
-	MobCatcher Wiki :: MobCatcher Wiki
+	side-bar :: MobCatcher Wiki
 </title>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -14,7 +13,7 @@
 
 
 
-<title>MobCatcher Wiki :: MobCatcher Wiki</title>
+<title>side-bar :: MobCatcher Wiki</title>
 
 <link rel="shortcut icon" href='/images/favicon.png' type="image/x-icon" />
 
@@ -3171,7 +3170,7 @@ article section.page nav.subpages li a {
     
   </head>
 
-  <body data-url="/"
+  <body data-url="/_layout/sidebar-after/"
 
   class="">
 
@@ -3210,7 +3209,9 @@ article section.page nav.subpages li a {
     </div>
     
 
-    <div>	
+    <div>
+
+		
 	
 			
 		
@@ -3238,7 +3239,9 @@ article section.page nav.subpages li a {
     <article>
       
       <aside class="">
-        	
+        
+
+		
 	
 			
 		
@@ -3348,7 +3351,9 @@ article section.page nav.subpages li a {
 
 
 
-</ul>	
+</ul>
+
+		
 	
 			
 		
@@ -3361,9 +3366,7 @@ article section.page nav.subpages li a {
       <section class="page ">
       
 	
-  	  
-	    <meta http-equiv = "refresh" content = "0; url = /home/"/>
-	  
+	 
 	
 
       </section>
@@ -3374,13 +3377,51 @@ article section.page nav.subpages li a {
       
 	
 
+		
+	
+			
+		
+	    	
+	  	
+	<div class="TableOfContents">
+    <label><i class="fas fa-align-right"></i>&nbsp;&nbsp;What&#39;s on this page</label>
+    <nav>
+        <ul >
+            <li><a href="/_layout/sidebar-after/">side-bar</a></li>
+        </ul>
+    </nav>
+    <nav id="TableOfContents"></nav>
+</div>
+
+		
+	
+			
+		
+	    	
+	    
+	<div class="Actions">
+	<nav>
+		<ul>
+				
+		    
+		    
+			
+		    
+
+    	</ul>
+	</nav>
+    
+</div>
+
       </section>
       
     </article>
     
     
     <footer>
-      	
+      
+
+		
 	
 			
 		
