--- a/docs/_layout/index.html
+++ b/docs/_layout/index.html
@@ -3,9 +3,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<meta name="generator" content="Hugo 0.100.1" />
     <title>
-	MobCatcher Wiki :: MobCatcher Wiki
+	_layouts :: MobCatcher Wiki
 </title>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -14,7 +13,7 @@
 
 
 
-<title>MobCatcher Wiki :: MobCatcher Wiki</title>
+<title>_layouts :: MobCatcher Wiki</title>
 
 <link rel="shortcut icon" href='/images/favicon.png' type="image/x-icon" />
 
@@ -3171,7 +3170,7 @@ article section.page nav.subpages li a {
     
   </head>
 
-  <body data-url="/"
+  <body data-url="/_layout/"
 
   class="">
 
@@ -3361,9 +3360,102 @@ article section.page nav.subpages li a {
       <section class="page ">
       
 	
-  	  
-	    <meta http-equiv = "refresh" content = "0; url = /home/"/>
-	  
+	 
+	    
+    
+    
+    <nav id="ariane" aria-label="breadcrumb">
+      <ol class="ariane">
+        
+  
+  	
+		
+  
+  	
+	<li >
+      <a class="text-link" href="">
+        Home
+      </a>
+    </li>
+	
+  
+    <li class="">
+      <a class="text-link" href="/_layout/">
+        _layouts
+      </a>
+    </li>
+	
+  	
+  
+    <li class="active">
+      
+        footer
+      
+    </li>
+
+      </ol>
+    </nav>
+    
+    
+
+    
+		
+        
+		
+		
+		
+		
+		
+		
+		
+
+		
+			<h1>footer</h1>
+        
+
+		
+										
+		
+
+		
+	
+
+	
+	
+	<div class="jump-to-section">
+		<span onclick="$h = $(this);$h.next('nav').slideToggle(100,function () {$h.children('i').attr('class',function () {return $h.next('nav').is(':visible') ? 'fas fa-chevron-down' : 'fas fa-chevron-right';});});">
+  			<span class="fas fa-align-right"></span>
+  			Jump to Section
+  			<i style=";" class="fas fa-chevron-right"></i>
+		</span>
+		<nav id="TableOfContents"></nav>
+	</div>
+	
+	
+
+
+
+
+
+
+	<div class="content">No content</div>
+
+
+
+
+
+
+	 
+	<div class="chevrons">
+		<a class="next" href="/home/" title="Overview" style="margin-right: 0px;">
+            <div>
+                <p>Next page</p>
+                <label>Overview</label>
+            </div>
+            <i class="fas fa-arrow-right" style="font-size: 1.7em"></i></a>
+	</div>
+	
+	 
 	
 
       </section>
@@ -3372,7 +3464,39 @@ article section.page nav.subpages li a {
       
       <section class="right-menu ">
       
+		
 	
+			
+		
+	    	
+	  	
+	<div class="TableOfContents">
+    <label><i class="fas fa-align-right"></i>&nbsp;&nbsp;What&#39;s on this page</label>
+    <nav>
+        <ul >
+            <li><a href="/_layout/">_layouts</a></li>
+        </ul>
+    </nav>
+    
+</div>	
+	
+			
+		
+	    	
+	    
+	<div class="Actions">
+	<nav>
+		<ul>
+				
+		    
+		    
+			
+		    
+
+    	</ul>
+	</nav>
+    
+</div>
 
       </section>
       
